# llm-d-rl

./: .gitignore  Dockerfile  Makefile  OWNERS  README-epp.md  README-inference-router.md  README-llmd.md  README-py-is.md  README.md  go.mod
api/v1alpha1/: types.go
benchmarks/orchestration/: README.md  analyze.py  generate_charts.py  llmd_bench.py  ray_bench.py  run_sweep.sh
cmd/rollout-controller/: discovery_k8s.go  discovery_nok8s.go  main.go
deploy/cks/: bench-trainer-job-ib.yaml  bench-trainer-job.yaml  epp-gateway.yaml  epp.yaml  gateway.yaml  llmd-rollout-controller.yaml  llmd-vllm-engine.yaml  namespace.yaml  nccl-trainer-configmap.yaml  nccl-trainer-prompts-configmap.yaml  nccl_weight_trainer.py  py-is-server.yaml  ray-trainer-job-ib.yaml  ray-trainer-job.yaml  rollout-controller-router-llmd.yaml  rollout-controller-router-py-is.yaml  rollout-controller.yaml  trainer-job-text.yaml  trainer-job-textinput.yaml  trainer-job.yaml  verl-trainer-job.yaml  vllm-engine-8b-ib.yaml  vllm-engine-8b.yaml  vllm-engine.yaml
deploy/llm-d/: prereqs.sh
deploy/slurm/: README.md  run.sbatch
deploy/verl/: prereqs.sh
docs/: arch-router-mode.drawio  architecture.md  llmd-k8s-architecture.drawio  rollout-controller.md
docs/proposals/: rl-rollout-northstar.md  roadmap.md
examples/: README.md  grpo_training_loop.py
python/: nccl_weight_trainer.py  prompts.txt  pyproject.toml
python/llmd_verl/: README.md  __init__.py  agent_loop.py  agent_loop_manager.py  checkpoint_engine.py  checkpoint_engine_manager.py  client.py  config.py  manager.py  rollout.py
(+33 files in other folders)
