[project]
name = "llmd-verl"
version = "0.1.0"
description = "veRL integration for llm-d-rl rollout infrastructure"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch",
]

[project.optional-dependencies]
verl = ["verl>=0.4"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
